<?xml version="1.0"?>
<package format="2">
  <name>chee0134_lab2</name>
  <version>0.0.0</version>
  <description>The chee0134_lab2 package</description>

  <maintainer email="cheeyengsung@gmail.com">Chee Yeng Sung</maintainer>
  <license>TODO</license>
  <author email="cheeyengsung@gmail.com">Chee Yeng Sung</author> 
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
